--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@ h1 {
 	margin-right: auto;
 	margin-left: auto;
 	padding: 2.5% 2.5% 0;
-	background: navy;
+	background: green;
 	line-height: 1.8;
 }
