--- a/Template/less/variables.less
+++ b/Template/less/variables.less
@@ -2,8 +2,7 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #fed136;
-@theme-danger:     #e74c3c;
+@theme-primary:    #0085A1;
 
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
